@@ -11,6 +11,7 @@ const int MILLISECS_PER_FRAME = 1000 / FPS;
 class Game {
     private:
         bool isRunning;
+        bool isDebug;
         int millisecsPreviousFrame = 0;
         SDL_Window* window;
         SDL_Renderer* renderer;
